testdata/bad/bad-fail-8.ct
# Command using Program

$ echo-stdin -exit 1 --> FAIL 6
